test("unit_tests") {
  sources = [
    "//src/base/assert_debug_linux_test.cc",
    "//src/base/assert_release_linux_test.cc",
    "//src/base/file_utils_test.cc",
    "//src/base/future_test.cc",
    "//src/base/hash_test.cc",
    "//src/base/locked_queue_test.cc",
    "//src/base/process_test.cc",
    "//src/base/queue_aggregator_test.cc",
    "//src/base/string_utils_test.cc",
    "//src/base/test_process.cc",
    "//src/base/test_process.h",
    "//src/client/clang_test.cc",
    "//src/daemon/absorber_test.cc",
    "//src/daemon/base_daemon_test.cc",
    "//src/daemon/emitter_test.cc",
    "//src/file_cache/file_cache_test.cc",
    "//src/net/connection_linux_test.cc",  # TODO: make this test cross-platform.
    "//src/net/event_loop_linux_test.cc",
    "//src/net/event_loop_mac_test.cc",
    "//src/net/test_connection.cc",
    "//src/net/test_connection.h",
    "//src/net/test_network_service.cc",
    "//src/net/test_network_service.h",
    "run_all_tests.cc",
  ]

  deps += [
    "//src/base:base",
    "//src/client:client",
    "//src/daemon:daemon",
    "//src/file_cache:file_cache",
    "//src/net:net",
    "//src/third_party/gtest:gtest",
    "//src/third_party/protobuf:protobuf",
  ]
}
