executable("unit_tests") {
  testonly = true

  sources = [
    "//src/base/assert_debug_linux_test.cc",
    "//src/base/assert_release_linux_test.cc",
    "//src/base/const_string_test.cc",
    "//src/base/file/file_test.cc",
    "//src/base/file_utils_test.cc",
    "//src/base/future_test.cc",
    "//src/base/locked_queue_test.cc",
    "//src/base/process_test.cc",
    "//src/base/queue_aggregator_test.cc",
    "//src/base/string_utils_test.cc",
    "//src/base/test_process.cc",
    "//src/base/test_process.h",
    "//src/cache/file_cache_test.cc",
    "//src/client/clang_test.cc",
    "//src/client/command_test.cc",
    "//src/daemon/absorber_test.cc",
    "//src/daemon/common_daemon_test.h",
    "//src/daemon/compilation_daemon_test.cc",
    "//src/daemon/emitter_test.cc",
    "//src/net/event_loop_linux_test.cc",
    "//src/net/event_loop_mac_test.cc",
    "//src/net/test_connection.cc",
    "//src/net/test_connection.h",
    "//src/net/test_end_point_resolver.h",
    "//src/net/test_network_service.cc",
    "//src/net/test_network_service.h",
    "run_all_tests.cc",
  ]

  public = []

  deps += [
    "//src/base:base",
    "//src/base:logging",
    "//src/cache:file_cache",
    "//src/client:client",
    "//src/client:command",
    "//src/daemon:configuration",
    "//src/daemon:daemon",
    "//src/net:net",
    "//src/proto:proto",
    "//src/third_party/gtest:gtest",
    "//src/third_party/protobuf:protobuf",
  ]
}
